--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <meta property="og:title" content="title test" />
+    <!-- <meta property="og:title" content="title test" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="../src/assets/thumbnail.jpg" />
     <meta property="og:url" content="https://louistran2k.github.io/react-app-meta-tags" />
     <meta property="og:description" content="{description}" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image:alt" content="{imageAlt}" />
+    <meta name="twitter:image:alt" content="{imageAlt}" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
