--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
     <meta property="og:title" content="title test" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://louistran2k.github.io/react-app-meta-tags/static/media/thumbnail.4db11d686e435b3f9d98.jpg" />
+    <meta property="og:image" content="https://www.nicesnippets.com/upload/blog/1586948566_Get-thumbnail-image-preview-before-uploading-in-React.png" />
     <meta property="og:url" content="https://louistran2k.github.io/react-app-meta-tags/" />
     <meta property="og:description" content="{description}" />
     <meta name="twitter:card" content="summary_large_image" />
