--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <meta property="og:title" content="title test" />
+    <!-- <meta property="og:title" content="title test" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.nicesnippets.com/upload/blog/1586948566_Get-thumbnail-image-preview-before-uploading-in-React.png" />
     <meta property="og:url" content="https://louistran2k.github.io/react-app-meta-tags/" />
     <meta property="og:description" content="{description}" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image:alt" content="{imageAlt}" />
+    <meta name="twitter:image:alt" content="{imageAlt}" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
